Fix .hero on mobile and change tab size

--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -1,30 +1,34 @@
 @import "variables";
 @import "susy";
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300);
+@import "~susy";
+@import "./responsive/mixinResponsive";
+@import "./helpers/tooltip";
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
 * { box-sizing: border-box; }
 
 body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Raleway', sans-serif;
-	background-color: #fff;
-	color: $color;
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+  background-color: #fff;
+  color: $color;
 }
 
 body, html {height: 100%; }
 
 h1,h2,h3,h4,h5,h6, p {
-	margin: 0;
+  margin: 0;
 }
 
 .background-blue {
-	background-color: $background_color-blue;
+  background-color: $background_color-blue;
 }
 
 .background-grey {
-	background-color: $background_color-grey;
+  background-color: $background_color-grey;
 }
 
 /**
@@ -32,53 +36,67 @@ h1,h2,h3,h4,h5,h6, p {
 **/
 
 @mixin title() {
-  	display: inline;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 2.4em;
+  display: inline;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 2.4em;
 }
 
 .box-title {
-	text-align: center;
-	padding-bottom: $site-container_padding;
-	color: $title_color;
+  text-align: center;
+  padding-bottom: $site-container_padding;
+  color: $title_color;
 }
 
 .title {
-	@include title();
+  @include title();
 }
 
 .title.black {
-	transition: 0.3s color;
-	&:hover {
-		color: $accent_color;
-	}
+  transition: 0.3s color;
+  &:hover {
+    color: $accent_color;
+  }
 }
 
 .title.white {
-	color: #fff;
+  color: #fff;
 }
 
 .site-container {
-	position: relative;
-	overflow: hidden;
-	margin: 0 auto;
-	padding-top: $site-container_padding;
-	padding-bottom: $site-container_padding;
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+  padding-top: $site-container_padding;
+  padding-bottom: $site-container_padding;
 }
 
 .link {
-	color: $accent_color;
+  color: $accent_color;
 }
 
 .icon {
-	display: inline-block;
-	width: 1em;
-	height: 1em;
-	fill: currentColor;
-	font-size: 30px;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  font-size: 30px;
 }
 
 .icon-github { fill: #fff; }
 .icon-twitter { fill: #55acee; }
 .icon-facebook { fill: #3b5998 }
+
+.container-allheight {
+  display: inline-block;
+  width: 100%;
+}
+@include emix-breakpoint(L) {
+  .container-allheight {
+    height: 100vh;
+    min-height: 900px;
+    .site-container {
+      height: 40%!important;
+    }
+  }
+}
